<resources>
    <string name="app_name">Student</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="delete_student">DELETE STUDENT</string>
    <string name="lastname">lastname</string>
    <string name="firstname">firstname</string>
    <string name="update_student">UPDATE STUDENT</string>
    <string name="list_students">LIST STUDENTS</string>
    <string name="large_text">Large Text</string>
</resources>
