<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zoro175.student.MainActivity"
    android:baselineAligned="false"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname_input"
        android:hint="@string/firstname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname_input"
        android:hint="@string/lastname"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_student"
        android:id="@+id/button_add"
        android:onClick="btn_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_student"
        android:id="@+id/button_delete"
        android:onClick="btn_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_student"
        android:id="@+id/button_update"
        android:onClick="btn_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_students"
        android:id="@+id/list_students"
        android:onClick="btn_click"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/large_text"
        android:id="@+id/textView"
        android:gravity="center|top"/>

</LinearLayout>
